--- a/ModernUIForm/ModernUIForm.vbproj
+++ b/ModernUIForm/ModernUIForm.vbproj
@@ -111,6 +111,7 @@
     <Compile Include="TemplateForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="WinAPI.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
