--- a/TestForm/TestForm.vbproj
+++ b/TestForm/TestForm.vbproj
@@ -118,6 +118,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="TestForm1.resx">
+      <DependentUpon>TestForm1.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\Application.myapp">
@@ -136,6 +139,32 @@
       <Project>{2bfc06c0-7b19-488f-b04d-e6449132b885}</Project>
       <Name>ModernUIForm</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonCloseW_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonMaximize_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonMaximizeW_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonMinimize_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonMinimizeW_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonRestore_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonRestoreW_12x12.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Window_ButtonClose.svg" />
+    <None Include="Resources\Window_ButtonMaximize.svg" />
+    <None Include="Resources\Window_ButtonRestore.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
